fix size issue on mobile

--- a/sass_component/_skills.scss
+++ b/sass_component/_skills.scss
@@ -44,7 +44,7 @@ canvas{
               "skill-bot-right";
 
       .skill-box{
-        font-size: 15px;
+        font-size: 12px;
 
       }
 
